# gpgkeymgr

./: .gitignore  INSTALL  Makefile  README  TODO  german.po  index.html  schluesselwaerter.cpp  schluesselwaerter.pot  translate.sh
cardgen/: karte.tex  karte2.tex
gpgkeymgr/: CHANGES  INSTALL  Makefile  Makefile.in  README  TODO  configure.ac  copyfile.cpp  copyfile.hpp  gpgkeymgr-0.4.tar.gz.sha256  gpgkeymgr-0.4.tar.gz.sig  gpgkeymgr.1  gpgkeymgr.cpp  stringutil.cpp  stringutil.hpp  vectorutil.hpp
gpgkeymgr/manpages/: gpgkeymgr-de.1  gpgkeymgr.1
gpgkeymgr/src/: auditor.cpp  auditor.hpp  copyfile.cpp  globalconsts.hpp  gpgkeymgr.cpp  parsearguments.cpp  stringutil.cpp  stringutil.hpp  userinteraction.cpp  userinteraction.hpp  vectorutil.cpp
gpgkeymgr/translations/: gpgkeymgr-de_DE.mo  gpgkeymgr-de_DE.po  gpgkeymgr-fr_FR.mo  gpgkeymgr-fr_FR.po
manpages/: gpgkeymgr-de.1  gpgkeymgr.1
schluesselwaerter/: INSTALL  Makefile  README  TODO  german.po  schluesselwaerter.1  schluesselwaerter.cpp  translate.sh
schluesselwaerter/translations/: schluesselwaerter-de_DE.mo  schluesselwaerter-de_DE.po
src/: auditor.hpp  copyfile.hpp  globalconsts.cpp  parsearguments.hpp  userinteraction.cpp
translations/: gpgkeymgr-de_DE.po  gpgkeymgr-fr_FR.po
